--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
    "private": true,
    "version": "0.0.0",
    "type": "module",
+   "homepage": "https://<your-username>.github.io/<your-repo-name>/",
    "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
       "dev": "vite",
       "start": "vite",
       "build": "vite build",
@@ -41,6 +44,7 @@
       "eslint-plugin-react": "^7.33.2",
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.5",
+      "gh-pages": "^6.3.0",
       "postcss": "^8.4.32",
       "postcss-nesting": "^13.0.1",
       "react-router-dom": "^6.21.1",
