--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "homepage": "https://<your-username>.github.io/<your-repo-name>/",
    "scripts": {
       "predeploy": "npm run build",
-      "deploy": "gh-pages -d build",
+      "deploy": "gh-pages -d dist",
       "dev": "vite",
       "start": "vite",
       "build": "vite build",
